# harness_tester_challenge

./: .gitignore  BLOCKER_PEELING_ACCEPTED.md  BLOCKER_PEELING_THEORY_LOG.md  BUG_THEORY_LOG.md  CMakeLists.txt  FINAL_COUNCIL_LEDGER.md  FINAL_FINDINGS.md  FINAL_FINDINGS_24_SUBMISSION.md  FINAL_FINDINGS_30_SOURCE_BACKED.md  FINAL_FINDINGS_REAUDITED.md  FINDINGS_TRACKER.md  FIRMWARE_DISCOVERY_PASS2_LEDGER.md  README.md  SIMULATOR_20_ISSUES.md  SIMULATOR_BUG_EVIDENCE.md  SIMULATOR_SCENARIO_REVIEW.md  goal.md
.memory/: SIMULATOR_INVENTORY.md  TODO.md  lessons.md  parity.md  protocol.md  status.md
audit_work/: kicad8_drc.json
audit_work/council/blind_reconstruction/: REPORT.md
audit_work/council/council_c/: REPORT.md
audit_work/council/council_d/: REPORT.md
audit_work/council/deep_firmware_spec_20260606/: COUNCIL_REPORT.md
audit_work/council/deep_firmware_spec_20260606/agents/expander/: evidence.txt
audit_work/council/deep_firmware_spec_20260606/evidence/: overflow_asan.txt  shift_ubsan.txt
audit_work/council/final_reconcile/member_a/: REPORT.md
audit_work/council/final_reconcile/member_b/: REPORT.md
audit_work/council/fw_state_agent/test_outputs/: matrix_closure.txt
audit_work/council/matrix_closure/: check_matrix.py
audit_work/council/pcb_blind/: REPORT.md
audit_work/council/pcb_blind/evidence/: gerber_connectivity.json
audit_work/kicad_export/: netlist.xml
reports/: BLOCKER_PEELING_REPORT.md
simulator/blocker_peeling/: board_electrical_overlay.fixture  dependency_graph.yaml  generate_persisted_corpus.py  generate_variants.py  repair_catalog.yaml  scenario_catalog.yaml  test_event_campaign.py  test_generator.py  test_metamorphic_campaign.py  test_persisted_corpus.py
simulator/blocker_peeling/corpus/: nmea_peripheral_regression.json
simulator/data/: README.md  pcb_fault_overlay.csv  schematic_harness_map.csv  schematic_io_map.csv
simulator/include/: Arduino.h
simulator/include/host_simulator/: analog.h  board.h  gps.h  oracle.h  runtime.h
simulator/ngspice/: README.md  board_harness.cir
simulator/ngspice/fixtures/: bad_pull_network.fixture  elevated_contact_resistance.fixture  i2c_pull_failure.fixture  intermittent_connection.fixture  leakage.fixture  led_no_current.fixture  led_overcurrent.fixture  nominal.fixture  open_circuit.fixture  reverse_polarity.fixture  transient_clamp.fixture  uart_level_mismatch.fixture  unexpected_short.fixture
simulator/ngspice/models/: first_pass_models.lib
simulator/src/: analog.cpp  board.cpp  gps.cpp  oracle.cpp  original_main.cpp  runtime.cpp
simulator/tests/: analog_cases.cpp  blocker_peeling_campaign.cpp  blocker_peeling_cases.cpp  blocker_peeling_event_campaign.cpp  blocker_peeling_harness_fixture.h  blocker_peeling_led_cases.cpp  blocker_peeling_metamorphic_campaign.cpp  blocker_peeling_persisted_corpus.cpp  blocker_peeling_workflow_cases.cpp  board_fixture.h  board_model_cases.cpp  bug_evidence_cases.cpp  button_feedback_cases.cpp  electrical_feedback_cases.cpp  expander_feedback_cases.cpp  expect_sanitizer_failure.cmake  firmware_cases.cpp  gps_cases.cpp  i2c_cases.cpp  oracle_cases.cpp  rmc_split_cases.cpp  runtime_cases.cpp  sanitizer_cases.cpp  scenario_cases.cpp  sd_cases.cpp  timing_cases.cpp  uart_cases.cpp
simulator/variants/: firmware_unmasked.ino
